Fix weird playback-info gap.

--- a/index.less
+++ b/index.less
@@ -433,7 +433,7 @@
                 width: 100%;
                 padding-left: 0.5%;
                 padding-right: 1%;
-                margin-top: -10px;
+                margin-top: -5px;
                 // -webkit-mask: linear-gradient(to right, transparent 0%, transparent calc(100% - 1px), #000 calc(100% - 1px), #000 100%);
                 mask-image: linear-gradient(-90deg, transparent 0%, black 10%, black 90%, transparent 100%);
                 -webkit-mask-image: linear-gradient(-90deg, transparent 0%, black 10%, black 90%, transparent 100%);
